Changed db from mongodb to mysql- added role and club enity

--- a/club/src/main/resources/application.properties
+++ b/club/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-spring.data.mongodb.uri:mongodb://makelifeoutofdream:123dream%2A%2A%2A@cluster0-shard-00-00-awg8j.mongodb.net:27017,cluster0-shard-00-01-awg8j.mongodb.net:27017,cluster0-shard-00-02-awg8j.mongodb.net:27017/club?ssl=true&replicaSet=Cluster0-shard-0&authSource=admin
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/club
+spring.datasource.username=root
+spring.datasource.password=root
 
