--- a/club/src/main/resources/application.properties
+++ b/club/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/club
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=root123
+
+server.context-path=/club
 
